--- a/static/index.html
+++ b/static/index.html
@@ -42,9 +42,12 @@
             <div class="loggedin" data-state="{{$device.LoggedIn}}">Device is {{if not $device.LoggedIn }}<b>not</b>{{end}} accessible</div>
             <div class="lockable" data-state="{{$device.Lockable}}">Device {{if $device.Lockable }}has{{else}}does not have{{end}} a lock code</div>
             <div class="lastexchange">Last contact: <span class="date" data-time="{{$device.LastExchange}}"</span></div>
-        <ol class="positions">
+            <ol class="positions">
+                <!-- Positions are from oldest to newest because map icons
+                 are appended to the list. Kind of annoying.
+                 You can also sort by data-time locally if desired. -->
                 {{range $position := $device.PreviousPositions}}
-                <li> <a data-latitude={{$position.Latitude}} data-longitude={{$position.Longitude}} data-altitude={{$position.Altitude}} href="http://maps.google.com/maps?hl=en&ll={{$position.Latitude}},{{$position.Longitude}}" class="position">Position at <span class="date" data-time="{{$position.Time}}">{{$position.Time}}</span></a></li>
+                <li> <a data-latitude={{$position.Latitude}} data-longitude={{$position.Longitude}} data-altitude={{$position.Altitude}} href="http://maps.google.com/maps?hl=en&ll={{$position.Latitude}},{{$position.Longitude}}" data-time="{{$position.Time}}" class="position">Position at <span class="date" data-time="{{$position.Time}}">{{$position.Time}}</span></a></li>
                 {{end}}
         </ol>
             <!-- only display commands that the client specified it accepts
@@ -96,6 +99,32 @@ function sendCommand(cmd) {
     console.debug("Sending", cmd);
     xhr.open("PUT", "/0/queue/" + getDeviceId());
     xhr.send(JSON.stringify(cmd));
+}
+
+function newMarker(lat, lon, t) {
+    // see https://www.mapbox.com/developers/simplestyle/
+    var marker = L.mapbox.markerLayer({
+        type: "Feature",
+        geometry: {
+            type: "Point",
+            coordinates:[lon, lat]
+        },
+        properties:{
+            'marker-color': '#f00',
+            'marker-symbol':'telephone',
+            title:'phone location',
+            description: t,
+            }});
+    return marker
+}
+
+function fadeMarkers() {
+    var markers = document.getElementsByClassName("leaflet-marker-icon");
+    var i = markers.length-1;
+    console.log("Fading " + i + " markers");
+    for (;i>=0;i--) {
+        markers[i].style.opacity = i * 0.1;
+    }
 }
 
 window.addEventListener("load",
@@ -161,29 +190,32 @@ window.addEventListener("load",
         for (var i=0; i<plisn; i++) {
             var p = plis[i];
             day = new Date(0);
-            console.debug(p.dataset.time);
             day.setUTCSeconds(parseInt(p.dataset.time));
             p.innerHTML = day.toString();
         }
 
         // initialize the maps
         var maps = document.getElementsByClassName('map');
+        markers = [];
         if (maps.length) {
                 var mapDiv = document.getElementsByClassName('map')[0];
                 var id ="{{.MapKey}}";
-                var map = L.mapbox.map(mapDiv, id);
-                //TODO: scan commands, only activate ones that are allowed by device
+                map = L.mapbox.map(mapDiv, id);
                 var locations = document.getElementsByClassName("position");
-                var iloc = locations.length;
+                var iloc = locations.length - 1 ;
                 if (iloc > 0) {
-                    loc = locations[0];
-                    map.setView([loc.dataset.latitude, loc.dataset.longitude], 12);
-                    L.marker([loc.dataset.latitude, loc.dataset.longitude]).addTo(map);
-                    for (var i=1; i<iloc; i++) {
+                    var loc
+                    // FYI: if map.hasLayer(marker) {map.removeLayer(marker) }
+                    for (var i = 0;i<=iloc; i++) {
                         loc = locations[i];
-                        L.marker([loc.dataset.latitude,
-                                loc.dataset.longitude]).addTo(map);
+                        t = loc.dataset.time;
+                        marker = newMarker(parseFloat(loc.dataset.latitude),
+                                parseFloat(loc.dataset.longitude), t);
+                        marker.addTo(map);
+                        markers.push(marker);
                     }
+                    map.setView([parseFloat(locations[iloc].dataset.latitude),
+                                parseFloat(locations[iloc].dataset.longitude)], 12);
                 } else {
                     map.setView([0,0], 4);
                 }
@@ -193,7 +225,12 @@ window.addEventListener("load",
                 socket.onmessage = function(msg) {
                     try {
                         data = JSON.parse(msg.data);
-                        L.marker([data.Latitude, data.Longitude]).addTo(map);
+                        var marker = newMarker(data.Latitude, data.Longitude, data.Time);
+                        marker.addTo(map);
+                        markers.push(marker);
+                        var rm = markers.shift();
+                        if (map.hasLayer(rm)) { map.removeLayer(rm) }
+                        fadeMarkers();
                     } catch(e) {
                         socket.close();
                         console.error("Add Fail:", e);
@@ -201,6 +238,7 @@ window.addEventListener("load",
                 }
                 // socket.onclose = function(){ console.debug("Socket closed...");}
 {{end}}
+            fadeMarkers();
         }
         if (document.getElementById("signin")) {
         document.getElementById("signin").addEventListener("click",
