--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <head>
+{{/*
+    Because the product name is in flux, pull it  from the config as
+    "productname". The format for how to use templates in go is at
+    http://golang.org/pkg/text/template/
+*/}}
     <title>{{.ProductName}}</title>
     <link rel="stylesheet" type="text/css" href="/static/fonts.css">
     <link rel="stylesheet" type="text/css" href="/static/style.css">
@@ -17,25 +22,33 @@
     </div>
     </header>
     <div class="welcome">
-    {{if not .UserId}}
+{{if not .UserId}}
         Please log in so that there is such wow and joy.
         </div>
-    {{else}}
+        {{else}}
+{{/*
+    All are welcome! Everything is possible at Zombo!
+*/}}
+
         <p>Welcome!</p>
         </div>
-        {{if len .DeviceList }}
+{{/*
+this is a pretty crappy device picker. Obviously, it should be better.
+*/}}
+{{  if len .DeviceList }}
         <div class="caption">You have more than one device.
         Please select which device you'd like to work with.</div>
-        <ul id="devices">
-        {{range $device := .DeviceList}}
+    <ul id="devices">
+{{      range $device := .DeviceList}}
         <li><a href="{{urlquery ($device.ID)}}">{{html ($device.Name)}}</a></li>
-        {{end}}
-    {{end}}
+{{      end}}
 </ul>
-    {{if not .Device}}
+{{  else }}
+{{/* Otherwise, dump the Device info we have */}}
+{{if not .Device}}
     <div class="device">You have no device registered yet.</div>
-    {{end}}
-    {{with $device := .Device}}
+{{end}}
+{{with $device := .Device}}
     <div class="device" data-id="{{$device.ID}}">
         <div class="status">
             <div class="name">{{html ($device.Name)}}'s Phone</div>
@@ -49,9 +62,12 @@
                 {{range $position := $device.PreviousPositions}}
                 <li> <a data-latitude={{$position.Latitude}} data-longitude={{$position.Longitude}} data-altitude={{$position.Altitude}} href="http://maps.google.com/maps?hl=en&ll={{$position.Latitude}},{{$position.Longitude}}" data-time="{{$position.Time}}" class="position">Position at <span class="date" data-time="{{$position.Time}}">{{$position.Time}}</span></a></li>
                 {{end}}
-        </ol>
-            <!-- only display commands that the client specified it accepts
-            -->
+            </ol>
+            {{/*
+            TODO: Only display commands client accepts.
+            Note: Because of page cleverness, you should keep the label
+            and input under the same parent.
+            */}}
         <table class="commands">
             <tr class="cmd t"><td><button data-cmd="t" class="cmdb">Track</button></td><td><label for="d">Duration (in seconds):</label><input name="d" placeholder="600"></td></tr>
             <tr class="cmd r"><td><button data-cmd="r" class="cmdb">Ring</button></td><td><label for="d">Duration (in seconds):</label><input name="d" placeholder="60"></td></tr>
@@ -63,19 +79,16 @@
         </div>
         </div>
         <div class="map" id="map_{{$device.ID}}"></div>
-    {{end}}
-    {{end}}
-    <footer>
-         <i>Footery stuffs...</i>
-         </footer>
+{{end}}{{/* with device */}}
+{{end}}{{/* else devicelist */}}
+{{end}}{{/* else userid */}}
+<footer>
+<!-- completely optional Footery stuffs... -->
+</footer>
          <script id='bidjs' src="https://login.persona.org/include.js" type="text/javascript"></script>
          <script id="mapbox" src="//api.tiles.mapbox.com/mapbox.js/v1.6.0/mapbox.js" type="text/javascript"></script>
          <script type="text/javascript">
 // javascript
-//TODO: add Persona Login
-//      add /login call to server
-//      add device Picker
-//      add /logout call to server
 
 function getDeviceId() {
     return document.getElementsByClassName("device")[0].dataset.id
@@ -174,7 +187,7 @@ window.addEventListener("load",
                     function(t){
                     var send = {}
                     var cmd = t.originalTarget.dataset.cmd;
-                    var args = t.originalTarget.parentElement.getElementsByTagName("input");
+                    var args = t.originalTarget.parentElement.parentElement.getElementsByTagName("input");
                     var largs = args.length;
                     var sargs = {};
                     for (i=0; i< largs; i++) {
