--- a/new_static/app/index.html
+++ b/new_static/app/index.html
@@ -9,6 +9,7 @@
     <title>Find My Device</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.css' rel='stylesheet' />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
@@ -22,19 +23,11 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="hero-unit">
-      <h1>Find My Device</h1>
-      <p>We iz rockin' deez thangs</p>
-      <ul>
-      <li>HTML5 Boilerplate</li>
-      <li>jQuery</li>
-      <li>Backbone.js</li>
-      <li>Underscore.js</li>
-      <li>Modernizr</li>
-      <li>RequireJS</li>
-      </ul>
+    <div id="container">
+      <div id="stage"></div>
     </div>
 
+    <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
     <!-- build:js scripts/main.js -->
     <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
     <!-- endbuild -->
