Working map view with positioned headers and footers.

--- a/new_static/_SpecRunner.html
+++ b/new_static/_SpecRunner.html
@@ -20,7 +20,7 @@
   
   <script src="app/bower_components/backbone/backbone.js"></script>
   
-  <script src=".tmp/scripts/templates.js"></script>
+  <script src="app/scripts/templates.js"></script>
   
   <script src="test/spec/test.js"></script>
   
