Toolbar styles with images.

--- a/new_static/app/index.html
+++ b/new_static/app/index.html
@@ -14,12 +14,13 @@
       <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
       <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-  <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="bower_components/modernizr/modernizr.js"></script>
-  <!-- endbuild -->
+    <!-- build:js scripts/vendor/modernizr.js -->
+      <script src="bower_components/modernizr/modernizr.js"></script>
+    <!-- endbuild -->
   </head>
   <body>
     <div id="stage"></div>
+    <div id="modal"></div>
     <script src="https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js"></script>
     <!-- build:js scripts/main.js -->
       <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
