--- a/static/app/index.html
+++ b/static/app/index.html
@@ -9,7 +9,7 @@
     <title>Find My Device</title>
     <meta name="viewport" content="width=device-width">
     <link href="https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.css" rel="stylesheet">
-    <!-- build:css(.tmp) styles/main.css -->
+    <!-- build:css(.tmp) /styles/main.css -->
       <link rel="stylesheet" href="bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans.css">
       <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
       <link rel="stylesheet" href="styles/main.css">
@@ -23,9 +23,7 @@
       <div id="stage"></div>
       <div id="modal"></div>
       <script src="https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js"></script>
-      <!-- build:js scripts/main.js -->
-        <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
-      <!-- endbuild -->
+      <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
     {{else}}
       <div class="hero">
         <h1>Rumor has it that you can't find your device.</h1>
