Fixed sign in/out
* Issue #83 -- added signout href
* Issue #84 -- added signin href
* Issue #63 -- added hard panic on db open failure.

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -31,7 +31,7 @@
         <h1>Rumor has it that you can't find your device.</h1>
         <h2>Don't worry: we're the app for that.</h2>
         <div id="login">
-          <a href="{{.Host.Login}}?client_id={{.Host.Client_id}}&scope=profile:email&action=signin&state=somestate">Sign in</a>
+          <a href="/signin/">Sign in</a>
         </div>
       </div>
     {{end}}
