Fixed CSS build issues.

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -9,8 +9,7 @@
     <title>Find My Device</title>
     <meta name="viewport" content="width=device-width">
     <link href="https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.css" rel="stylesheet">
-    <!-- build:css(.tmp) /styles/main.css -->
-      <link rel="stylesheet" href="bower_components/typopro/web/TypoPRO-FiraSans/TypoPRO-FiraSans.css">
+    <!-- build:css(.tmp) styles/main.css -->
       <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
       <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
