Added basic notifications.

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -21,6 +21,7 @@
     {{if .UserId}}
       <div id="stage"></div>
       <div id="modal"></div>
+      <div id="notifier"></div>
       <script src="https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js"></script>
       <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
     {{else}}
